@@ -1,0 +1,3 @@
+#include <windows.h>
+#define NTOS_MODE_USER
+#include <ntos.h>
