@@ -1,10 +1,4 @@
-// heap.c
-
-#undef WIN32_LEAN_AND_MEAN
-#include <windows.h>
-#include <ddk/ntddk.h>
-#define NTOS_MODE_USER
-#include <ntos.h>
+#include "precomp.h"
 #include <debug.h>
 
 // global variables in a dll are process-global
