@@ -21,12 +21,8 @@
  *
  */
 
-
-#undef WIN32_LEAN_AND_MEAN
-#include <windows.h>
-#include <ddk/ntddk.h>
+#include "precomp.h"
 #include <string.h>
-
 #define NDEBUG
 #include <win32k/debug1.h>
 
